# widennet-pipeline

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  MANIFEST.in  README.md  api.py  check.py  create_sample_data.py  dataset.py  evaluate.py  predict.py  pyproject.toml  requirements.txt  setup.py
data/: X.npy  sample.sol  y.npy
models/: embedding_matrix.npy  vocab_index.json  word2vec_opcodes.model
tests/: test_model.py
widennet/: __init__.py  encode.py  model.py  preprocess.py  train.py  train_word2vec.py
widennet.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
