[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "widennet"
version = "1.0.0"
description = "Smart Contract Vulnerability Detection using Wide and Deep Neural Network"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
authors = [
    { name = "Deepu P", email = "pdeepuprakash@gmail.com" }
]
keywords = [
    "smart contract",
    "vulnerability detection",
    "blockchain",
    "ethereum",
    "deep learning",
    "wide and deep network",
    "reentrancy",
    "solidity",
    "security",
    "NLP",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.11"
dependencies = [
    "tensorflow>=2.13",
    "gensim>=4.3",
    "evmdasm>=0.1.14",
    "py-solc-x>=1.1.1",
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "matplotlib>=3.7",
    "seaborn>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
    "twine>=4.0",
    "build>=0.10",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=1.3",
    "myst-parser>=2.0",
]

[project.urls]
Homepage = "https://github.com/Deepu-p-123/widennet-pipeline"
Repository = "https://github.com/Deepu-p-123/widennet-pipeline"
Documentation = "https://widennet.readthedocs.io"
"Bug Tracker" = "https://github.com/Deepu-p-123/widennet-pipeline/issues"
"Research Paper" = "https://doi.org/10.1016/j.scico.2024.103172"

[project.scripts]
widennet-predict = "widennet.predict:main"
widennet-api = "widennet.api:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["widennet*"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "--cov=widennet --cov-report=term-missing"
